# pandora-glib

./: .gitignore  Makefile.am  NEWS  README.md  configure.ac  pandora-glib.pc.in
build-aux/: git-version-gen
doc/: Makefile.am
m4/: gee_search.m4
src/: Apps.vala  Config.vala  Makefile.am  Pandora.vala  Utility.vala
src/Apps/: App.vala  AppList.vala  DataCache.vala  Pnd.vala  enums.vala
src/Config/: AppsConfigFile.vala  ConfigFile.vala  DesktopConfigFile.vala  PndOvrAppFile.vala  PndOvrFile.vala
vapi/: GdkKeySyms.vapi  Makefile.am  config.vapi  pnd.vapi
